k8s/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: spot-render-web
  namespace: spot-render
spec:
  replicas: 2
  strategy:
    canary:
      canaryService: spot-render-web-canary
      stableService: spot-render-web-stable
      steps:
        - setWeight: 10
        - pause: {duration: 120}
        - setWeight: 50
        - pause: {duration: 180}
  selector:
    matchLabels:
      app: spot-render-web
  template:
    metadata:
      labels:
        app: spot-render-web
    spec:
      containers:
        - name: spot-render-web
          image: 000000000000.dkr.ecr.us-east-1.amazonaws.com/spot-render-web:sha-2030aa0
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 20
